-- vim: set textwidth=80:
name: fun-tools
version: 0.0.1
synopsis: Some assorted code to make 
license: PublicDomain
author: Anton Golov
stability: nonexistent
build-type: Simple
cabal-version: >= 1.22

executable main
  main-is: Main.hs
  build-depends: base, peggy, mtl, bound, prelude-extras, pretty
  hs-source-dirs: .
  ghc-options: -Wall
  default-language: Haskell2010
  default-extensions: TemplateHaskell, DeriveFunctor, DeriveFoldable,
    DeriveTraversable, QuasiQuotes, FlexibleContexts
