-- vim: set textwidth=80:
name: fun-tools
version: 0.0.1
synopsis: Some assorted fun with functional language compilation
license: PublicDomain
author: Anton Golov
stability: nonexistent
build-type: Simple
cabal-version: >= 1.22

executable main
  main-is: Main.hs
  build-depends: base, mtl, parsec, pretty, monad-gen, containers
  hs-source-dirs: src/
  ghc-options: -Wall
  default-language: Haskell2010
  default-extensions: DeriveFunctor, DeriveFoldable, ConstraintKinds,
    DeriveTraversable, FlexibleContexts, GeneralizedNewtypeDeriving
